Update CI/CD config to save screenshot and video when run cypress test

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -35,22 +35,20 @@ jobs:
         with:
           start: npm start
           wait-on: 'http://localhost:3000'
-          record: false
-
-      # Optional: If you want to try with the latest version
-      # Uncomment these if needed after initial successful run
-      # - name: Upload screenshots on failure
-      #   uses: actions/upload-artifact@v4
-      #   if: failure()
-      #   with:
-      #     name: cypress-screenshots
-      #     path: cypress/screenshots
-      #     if-no-files-found: ignore
-      # 
-      # - name: Upload videos on failure
-      #   uses: actions/upload-artifact@v4
-      #   if: failure()
-      #   with:
-      #     name: cypress-videos
-      #     path: cypress/videos
-      #     if-no-files-found: ignore 
+          record: true
+      
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+      
+      - name: Upload videos
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore 
